erDiagram

    CATEGORY {
        int category_id PK
        string category_name
        string description
    }

    PRODUCT {
        int product_id PK
        string product_name
        int category_id FK
        decimal unit_price
        int stock_quantity
    }

    CUSTOMER {
        int customer_id PK
        string full_name
        string phone
        string email
        string address
    }

    EMPLOYEE {
        int employee_id PK
        string full_name
        string position
        string phone
        string email
        date hire_date
    }

    INVOICE {
        int invoice_id PK
        int customer_id FK
        int employee_id FK
        datetime invoice_datetime
        int payment_method
    }

    INVOICE_DETAIL {
        int invoice_id PK, FK
        int product_id PK, FK
        int quantity
        decimal unit_price
    }

    CATEGORY ||--o{ PRODUCT : contains

    CUSTOMER |o--o{ INVOICE : makes
    EMPLOYEE ||--o{ INVOICE : creates

    INVOICE ||--|{ INVOICE_DETAIL : contains
    PRODUCT ||--o{ INVOICE_DETAIL : appears_in